Fix wrap padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -156,8 +156,7 @@ a:visited { color: #205caa; }
 
 .page-content .wrap
 {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px;
 }
 
 .page-content img
